--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@ Released for free under a Creative Commons Attribution 2.5 License
 body {
 	margin: 0;
 	padding: 0;
-	background: #961D46 url(images/img01.jpg) repeat;
+	background: #961D46;
 	font-family: 'Open Sans Condensed', sans-serif;
 	font-size: 16px;
 	color: #8A8985;
@@ -66,7 +66,7 @@ a:hover {
 #header-wrapper {
 	overflow: hidden;
 	height: 600px;
-	background: url(images/img02.jpg) repeat-x left top;
+	background: repeat-x left top;
 }
 
 #header {
@@ -74,7 +74,7 @@ a:hover {
 	height: 200px;
 	margin: 0 auto;
 	padding: 0px 20px;
-	background: url(images/img01.jpg) no-repeat left top;
+	background: no-repeat left top;
 }
 
 /* Banner */
@@ -82,7 +82,7 @@ a:hover {
 #banner {
 	overflow: hidden;
 	height: 400px;
-	background: url(images/img04.jpg) no-repeat center bottom;
+	background: no-repeat center bottom;
 }
 
 #banner .image-style {
@@ -239,7 +239,7 @@ a:hover {
 	float: left;
 	width: 620px;
 	padding: 0px 40px 0px 0px;
-	background: url(images/img05.jpg) no-repeat right 40px;
+	background: no-repeat right 40px;
 }
 
 .post {
@@ -293,7 +293,7 @@ a:hover {
 	height: 25px;
 	padding: 2px 0px 0px 0px;
 	margin-right: 10px;
-	background: url(images/img08.jpg) no-repeat left top;
+	background: no-repeat left top;
 	text-align: center;
 	color: #FFFFFF;
 }
@@ -304,7 +304,7 @@ a:hover {
 	width: 88px;
 	height: 25px;
 	padding: 2px 0px 0px 0px;
-	background: url(images/img08.jpg) no-repeat left top;
+	background: no-repeat left top;
 	text-align: center;
 	color: #FFFFFF;
 }
@@ -356,7 +356,7 @@ a:hover {
 /* Three Column Footer Content */
 
 #footer-content {
-	background: url(images/img04.png) no-repeat center top;
+	background: no-repeat center top;
 	color: #E2B8C6;
 }
 
@@ -397,7 +397,7 @@ a:hover {
 	height: 100px;
 	margin: 0 auto;
 	padding: 50px 0px 0px 0px;
-	background: url(images/img04.png) no-repeat center top;
+	background: no-repeat center top;
 }
 
 #footer p {
@@ -406,10 +406,12 @@ a:hover {
 	line-height: normal;
 	text-align: center;
 	color: #C76485;
+	font-size: 10px;
 }
 
 #footer a {
 	color: #C76485;
+	font-size: 10px;
 }
 
 #marketing {
@@ -439,7 +441,7 @@ a:hover {
 	width: 252px;
 	height: 38px;
 	padding: 15px 0px 0px 0px;
-	background: url(images/img07.jpg) no-repeat left top;
+	background: no-repeat left top;
 	letter-spacing: -2px;
 	text-align: center;
 	text-transform: lowercase;
@@ -450,7 +452,7 @@ a:hover {
 .box1 {
 	overflow: hidden;
 	height: 300px;
-	background: url(images/img04.jpg) no-repeat center bottom;
+	background: no-repeat center bottom;
 }
 
 .list-style1 {
@@ -478,7 +480,7 @@ a:hover {
 
 .list-style2 li {
 	padding: 7px 0px 7px 0px;
-	background: url(images/img06.png) repeat-x left top;
+	background: repeat-x left top;
 }
 
 .list-style2 a {
@@ -514,8 +516,7 @@ Released   : 20120817
 <meta name="description" content="" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <title>De Sanctuary Malaysia</title>
-<link href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet" type="text/css" />
-<link href="style.css" rel="stylesheet" type="text/css" media="screen" />
+<link href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet" type="text/css" />	
 </head>
 <body>
 <div id="header-wrapper">
@@ -531,68 +532,7 @@ Released   : 20120817
 		</div>
 	</div>
 	<div id="banner" class="container">
-		<div class="image-style"><img src="images/img03.jpg" width="970" height="320" alt="" /></div>
-	</div>
-</div>
-<div id="wrapper">
-	<div id="splash" class="container"><span>Donec placerat odio vel elit.</span> Nullam ante orci, pellentesque eget, tempus quis, ultrices in, est. Curabitur sit amet nulla. Nam in massa. Sed vel tellus. </div>
-	<div id="page" class="container">
-		<div id="content">
-			<div class="post">
-				<h2 class="title"><a href="#">Welcome to Good-Natured </a></h2>
-				<div class="entry">
-					<p>This is <strong>Good-Natured </strong>, a free, fully standards-compliant CSS template designed by <a href="http://www.freecsstemplates.org/" rel="nofollow">FreeCSSTemplates.org</a>.  This free template is released under a <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0</a> license, so you’re pretty much free to do whatever you want with it (even use it commercially) provided you keep the links in the footer intact. Aside from that, have fun with it :)</p>
-					<p>Sed lacus. Donec lectus. Nullam pretium nibh ut turpis. Nam bibendum. In nulla tortor, elementum vel, tempor at, varius non, purus. Mauris vitae nisl nec metus placerat consectetuer. Donec ipsum. Proin imperdiet est. Phasellus <a href="#">dapibus semper urna</a>. Pellentesque ornare, orci in consectetuer hendrerit, urna elit eleifend nunc, ut consectetuer nisl felis ac diam. Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis,  egestas at sem.  Mauris quam enim,  in, rhoncus ut, lobortis a, est. Pellentesque ornare, orci in consectetuer hendrerit, urna elit eleifend nunc, ut consectetuer. </p>
-				</div>
-			</div>
-			<div style="clear: both;">&nbsp;</div>
-		</div>
-		<!-- end #content -->
-		<div id="sidebar">
-			<div>
-				<h2>Nulla luctus eleifend</h2>
-				<ul class="list-style1">
-					<li class="first"><a href="#">Aliquam libero</a></li>
-					<li><a href="#">Consectetuer adipiscing elit</a></li>
-					<li><a href="#">Metus aliquam pellentesque</a></li>
-					<li><a href="#">Suspendisse iaculis mauris</a></li>
-					<li><a href="#">Urnanet non molestie semper</a></li>
-					<li><a href="#">Proin gravida orci porttitor</a></li>
-				</ul>
-			</div>
-		</div>
-		<!-- end #sidebar -->
-		<div style="clear: both;">&nbsp;</div>
-	</div>
-	<!-- end #page --> 
-</div>
-<div id="footer-content" class="container">
-	<div id="footer-bg">
-		<div id="column1">
-			<h2>Welcome to my website</h2>
-			<p>In posuere eleifend odio quisque semper augue mattis wisi maecenas ligula. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum. Quisque dictum integer nisl risus, sagittis convallis, rutrum id, congue, and nibh. Pellentesque tristique ante ut risus. Quisque dictum. Integer nisl risus, sagittis convallis, rutrum id, elementum congue, nibh. Suspendisse dictum porta lectus.<br />
-			</p>
-		</div>
-		<div id="column2">
-			<h2>Etiam rhoncus volutpat</h2>
-			<ul class="list-style2">
-				<li class="first"><a href="#">Pellentesque quis elit non lectus gravida blandit.</a></li>
-				<li><a href="#">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</a></li>
-				<li><a href="#">Phasellus nec erat sit amet nibh pellentesque congue.</a></li>
-				<li><a href="#">Cras vitae metus aliquam risus pellentesque pharetra.</a></li>
-				<li><a href="#">Maecenas vitae orci vitae tellus feugiat eleifend.</a></li>
-			</ul>
-		</div>
-		<div id="column3">
-			<h2>Recommended Links</h2>
-			<ul class="list-style2">
-				<li class="first"><a href="#">Pellentesque quis elit non lectus gravida blandit.</a></li>
-				<li><a href="#">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</a></li>
-				<li><a href="#">Phasellus nec erat sit amet nibh pellentesque congue.</a></li>
-				<li><a href="#">Cras vitae metus aliquam risus pellentesque pharetra.</a></li>
-				<li><a href="#">Maecenas vitae orci vitae tellus feugiat eleifend.</a></li>
-			</ul>
-		</div>
+		<div class="image-style"><%= image_tag("images/banner.png") %></div>
 	</div>
 </div>
 <div id="footer">
