--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -532,7 +532,7 @@ Released   : 20120817
 		</div>
 	</div>
 	<div id="banner" class="container">
-		<div class="image-style"><%= image_tag("images/banner.png") %></div>
+		<div class="image-style"><img src="/images/banner.png" height="300" width="900"></div>
 	</div>
 </div>
 <div id="footer">
