All text added in, basics complete

--- a/app/views/static/find_us.html.erb
+++ b/app/views/static/find_us.html.erb
@@ -1,3 +1,31 @@
-<x>
-bob
-	</x>
+<!DOCTYPE html>
+<div id="wrapper">
+	<div id="splash" class="container">
+		<span>De Sanctary Malaysia</span>
+	</div>
+	<div id="page" class="container">
+		<div id="content">
+			<div class="post">
+				<h2 class="title"><a href="#">Want to find us? </a></h2>
+				<div class="entry">
+					<%= image_tag("address.jpg", :alt => "rss feed", :width => 700, :height => 500) %>
+					<p>
+						Location
+						9-1,Plaza Danau 2,
+						Jalan 4/109F,
+						Off Jalan Klang Lama,
+						Taman Danau Desa,
+						58100 Kuala Lumpur,
+						Malaysia.
+					</p>
+				</div>
+			</div>
+			<div style="clear: both;">
+				&nbsp;
+			</div>
+		</div>
+		<div style="clear: both;">
+			&nbsp;
+		</div>
+	</div>
+	</html>
