--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,500 +1,496 @@
 <style>
-
-/*
-Design by Free CSS Templates
-http://www.freecsstemplates.org
-Released for free under a Creative Commons Attribution 2.5 License
-*/
-
-body {
-	margin: 0;
-	padding: 0;
-	background: #961D46;
-	font-family: 'Open Sans Condensed', sans-serif;
-	font-size: 16px;
-	color: #8A8985;
-}
-
-h1, h2, h3 {
-	margin: 0;
-	padding: 0;
-	text-transform: lowercase;
-	font-weight: normal;
-	color: #7D7764;
-}
-
-h1 {
-	font-size: 2em;
-}
-
-h2 {
-	font-size: 2.8em;
-}
-
-h3 {
-	font-size: 1.6em;
-}
-
-p, ul, ol {
-	margin-top: 0;
-	line-height: 180%;
-}
-
-ul, ol {
-}
-
-a {
-	text-decoration: none;
-	color: #CA4C44;
-}
-
-a:hover {
-}
-
-#wrapper {
-	overflow: hidden;
-	background-color: #FFFFFF;
-}
-
-.container {
-	width: 1000px;
-	margin: 0px auto;
-}
-
-/* Header */
-
-#header-wrapper {
-	overflow: hidden;
-	height: 600px;
-	background: repeat-x left top;
-}
-
-#header {
-	width: 960px;
-	height: 200px;
-	margin: 0 auto;
-	padding: 0px 20px;
-	background: no-repeat left top;
-}
-
-/* Banner */
-
-#banner {
-	overflow: hidden;
-	height: 400px;
-	background: no-repeat center bottom;
-}
-
-#banner .image-style {
-	border: 15px solid #F4F4F4;
-}
-
-
-/* Logo */
-
-#logo {
-	float: left;
-	width: 300px;
-	margin: 0;
-	padding: 0;
-	color: #000000;
-}
-
-#logo h1, #logo p {
-}
-
-#logo h1 {
-	padding: 60px 0px 0px 0px;
-	letter-spacing: -2px;
-	text-transform: lowercase;
-	font-size: 3.8em;
-}
-
-#logo p {
-	margin-top: -10px;
-	padding: 0px 0px 0px 5px;
-	font-size: 22px;
-	color: #FFFFFF;
-} 
-
-#logo p a {
-	color: #FFFFFF;
-}
-
-#logo a {
-	border: none;
-	background: none;
-	text-decoration: none;
-	color: #FFFFFF;
-}
-
-/* Splash */
-
-#splash {
-	overflow: hidden;
-	padding: 0px 0px 50px 0px;
-	border-bottom: 1px dashed #E7E2DC;
-	letter-spacing: -3px;
-	text-align: center;
-	font-size: 48px;
-}
-
-#splash span {
-	color: #313131;
-}
-
-
-
-/* Search */
-
-#search {
-	float: right;
-	width: 280px;
-	height: 60px;
-	padding: 20px 0px 0px 0px;
-}
-
-#search form {
-	height: 41px;
-	margin: 0;
-	padding: 10px 0 0 20px;
-}
-
-#search fieldset {
-	margin: 0;
-	padding: 0;
-	border: none;
-}
-
-#search-text {
-	width: 170px;
-	padding: 6px 5px 2px 5px;
-	border: 1px solid #DEDEDE;
-	background: #FFFFFF;
-	text-transform: lowercase;
-	font: normal 11px Arial, Helvetica, sans-serif;
-	color: #5D781D;
-}
-
-#search-submit {
-	width: 50px;
-	height: 22px;
-	border: none;
-	background: #B9B9B9;
-	color: #000000;
-}
-
-/* Menu */
-
-#menu {
-	float: right;
-	width: 500px;
-	height: 90px;
-	margin: 0 auto;
-	padding: 0;
-}
-
-#menu ul {
-	float: right;
-	margin: 0;
-	padding: 85px 0px 0px 0px;
-	list-style: none;
-	line-height: normal;
-}
-
-#menu li {
-	float: left;
-}
-
-#menu a {
-	display: block;
-	margin-right: 1px;
-	padding: 10px 0px 15px 30px;
-	text-decoration: none;
-	text-transform: lowercase;
-	text-align: center;
-	font-size: 20px;
-	font-weight: 300;
-	color: #CE92A6;
-	border: none;
-}
-
-#menu a:hover, #menu .current_page_item a {
-	text-decoration: none;
-	color: #FFFFFF;
-}
-
-#menu .current_page_item a {
-}
-
-/* Page */
-
-#page {
-	padding: 30px 0px 0px 0px;
-}
-
-/* Content */
-
-#content {
-	float: left;
-	width: 620px;
-	padding: 0px 40px 0px 0px;
-	background: no-repeat right 40px;
-}
-
-.post {
-	overflow: hidden;
-}
-
-.post .title {
-	padding: 0px 0px 30px 0px;
-	letter-spacing: -3px;
-}
-
-.post .title a {
-	border: none;
-	text-transform: lowercase;
-	color: #7D7764;
-}
-
-.post .meta {
-	margin-bottom: 30px;
-	padding: 0px;
-	text-align: left;
-	font-size: 16px;
-}
-
-.post .meta .date {
-	float: left;
-}
-
-.post .meta .posted {
-	float: right;
-}
-
-.post .meta a {
-}
-
-.post .entry {
-	padding: 0px 0px 20px 0px;
-	padding-bottom: 20px;
-	text-align: justify;
-}
-
-.links {
-	padding-top: 20px;
-	margin-bottom: 30px;
-}
-
-.more {
-	display: block;
-	float: left;
-	width: 88px;
-	height: 25px;
-	padding: 2px 0px 0px 0px;
-	margin-right: 10px;
-	background: no-repeat left top;
-	text-align: center;
-	color: #FFFFFF;
-}
-
-.comments {
-	display: block;
-	float: left;
-	width: 88px;
-	height: 25px;
-	padding: 2px 0px 0px 0px;
-	background: no-repeat left top;
-	text-align: center;
-	color: #FFFFFF;
-}
-
-/* Sidebar */
-
-#sidebar {
-	float: right;
-	width: 320px;
-	margin: 0px;
-	padding: 0px 0px 0px 0px;
-	color: #787878;
-}
-
-#sidebar h2 {
-	padding: 0px 0px 30px 0px;
-	letter-spacing: -3px;
-}
-
-#sidebar a {
-	border: none;
-}
-
-#sidebar a:hover {
-	text-decoration: underline;
-}
-
-/* Calendar */
-
-#calendar {
-}
-
-#calendar_wrap {
-	padding: 20px;
-}
-
-#calendar table {
-	width: 100%;
-}
-
-#calendar tbody td {
-	text-align: center;
-}
-
-#calendar #next {
-	text-align: right;
-}
-
-/* Three Column Footer Content */
-
-#footer-content {
-	background: no-repeat center top;
-	color: #E2B8C6;
-}
-
-#footer-bg {
-	overflow: hidden;
-	padding: 70px 0px;
-}
-
-#footer-content h2 {
-	margin: 0px;
-	padding: 0px 0px 20px 0px;
-	letter-spacing: -2px;
-	text-shadow: 1px 2px 0px #861F40;
-	text-transform: lowercase;
-	font-size: 36px;
-	color: #FFFFFF;
-}
-
-#column1 {
-	float: left;
-	width: 320px;
-	margin-right: 20px;
-}
-
-#column2 {
-	float: left;
-	width: 320px;
-}
-
-#column3 {
-	float: right;
-	width: 320px;
-}
-
-/* Footer */
-
-#footer {
-	height: 100px;
-	margin: 0 auto;
-	padding: 50px 0px 0px 0px;
-	background: no-repeat center top;
-}
-
-#footer p {
-	margin: 0;
-	padding-top: 10px;
-	line-height: normal;
-	text-align: center;
-	color: #C76485;
-	font-size: 10px;
-}
-
-#footer a {
-	color: #C76485;
-	font-size: 10px;
-}
-
-#marketing {
-	overflow: hidden;
-	margin-bottom: 30px;
-	padding: 20px 0px 10px 0px;
-	border-top: 1px solid #E3E3E3;
-	border-bottom: 1px solid #E3E3E3;
-}
-
-#marketing .text1 {
-	float: left;
-	margin: 0px;
-	padding: 0px;
-	letter-spacing: -2px;
-	text-transform: lowercase;
-	font-size: 34px;
-	color: #345E9B;
-}
-
-#marketing .text2 {
-	float: right;
-}
-
-#marketing .text2 a {
-	display: block;
-	width: 252px;
-	height: 38px;
-	padding: 15px 0px 0px 0px;
-	background: no-repeat left top;
-	letter-spacing: -2px;
-	text-align: center;
-	text-transform: lowercase;
-	font-size: 30px;
-	color: #FFFFFF;
-}
-
-.box1 {
-	overflow: hidden;
-	height: 300px;
-	background: no-repeat center bottom;
-}
-
-.list-style1 {
-	margin: 0px;
-	padding: 0px;
-	list-style: none;
-}
-
-.list-style1 li {
-	padding: 7px 0px 7px 0px;
-	border-top: 1px dashed #E7E2DC;
-}
-
-.list-style1 .first {
-	padding-top: 0px;
-	border-top: none;
-}
-
-
-.list-style2 {
-	margin: 0px;
-	padding: 0px;
-	list-style: none;
-}
-
-.list-style2 li {
-	padding: 7px 0px 7px 0px;
-	background: repeat-x left top;
-}
-
-.list-style2 a {
-	color: #E2B8C6;
-}
-
-.list-style2 a:hover {
-	color: #C76485;
-}
-
-.list-style2 .first {
-	padding-top: 0px;
-	background: none;
-}
+	/*
+	 Design by Free CSS Templates
+	 http://www.freecsstemplates.org
+	 Released for free under a Creative Commons Attribution 2.5 License
+	 */
+
+	body {
+		margin: 0;
+		padding: 0;
+		background: #961D46;
+		font-family: 'Open Sans Condensed', sans-serif;
+		font-size: 16px;
+		color: #8A8985;
+	}
+
+	h1, h2, h3 {
+		margin: 0;
+		padding: 0;
+		text-transform: lowercase;
+		font-weight: normal;
+		color: #7D7764;
+	}
+
+	h1 {
+		font-size: 2em;
+	}
+
+	h2 {
+		font-size: 2.8em;
+	}
+
+	h3 {
+		font-size: 1.6em;
+	}
+
+	p, ul, ol {
+		margin-top: 0;
+		line-height: 180%;
+	}
+
+	ul, ol {
+	}
+
+	a {
+		text-decoration: none;
+		color: #CA4C44;
+	}
+
+	a:hover {
+	}
+
+	#wrapper {
+		overflow: hidden;
+		background-color: #FFFFFF;
+	}
+
+	.container {
+		width: 1000px;
+		margin: 0px auto;
+	}
+
+	/* Header */
+
+	#header-wrapper {
+		overflow: hidden;
+		height: 600px;
+		background: repeat-x left top;
+	}
+
+	#header {
+		width: 960px;
+		height: 200px;
+		margin: 0 auto;
+		padding: 0px 20px;
+		background: no-repeat left top;
+	}
+
+	/* Banner */
+
+	#banner {
+		overflow: hidden;
+		height: 400px;
+		background: no-repeat center bottom;
+	}
+
+	#banner .image-style {
+		border: 15px solid #F4F4F4;
+	}
+
+	/* Logo */
+
+	#logo {
+		float: left;
+		width: 300px;
+		margin: 0;
+		padding: 0;
+		color: #000000;
+	}
+
+	#logo h1, #logo p {
+	}
+
+	#logo h1 {
+		padding: 60px 0px 0px 0px;
+		letter-spacing: -2px;
+		text-transform: lowercase;
+		font-size: 3.8em;
+	}
+
+	#logo p {
+		margin-top: -10px;
+		padding: 0px 0px 0px 5px;
+		font-size: 22px;
+		color: #FFFFFF;
+	}
+
+	#logo p a {
+		color: #FFFFFF;
+	}
+
+	#logo a {
+		border: none;
+		background: none;
+		text-decoration: none;
+		color: #FFFFFF;
+	}
+
+	/* Splash */
+
+	#splash {
+		overflow: hidden;
+		padding: 0px 0px 50px 0px;
+		border-bottom: 1px dashed #E7E2DC;
+		letter-spacing: -3px;
+		text-align: center;
+		font-size: 48px;
+	}
+
+	#splash span {
+		color: #313131;
+	}
+
+	/* Search */
+
+	#search {
+		float: right;
+		width: 280px;
+		height: 60px;
+		padding: 20px 0px 0px 0px;
+	}
+
+	#search form {
+		height: 41px;
+		margin: 0;
+		padding: 10px 0 0 20px;
+	}
+
+	#search fieldset {
+		margin: 0;
+		padding: 0;
+		border: none;
+	}
+
+	#search-text {
+		width: 170px;
+		padding: 6px 5px 2px 5px;
+		border: 1px solid #DEDEDE;
+		background: #FFFFFF;
+		text-transform: lowercase;
+		font: normal 11px Arial, Helvetica, sans-serif;
+		color: #5D781D;
+	}
+
+	#search-submit {
+		width: 50px;
+		height: 22px;
+		border: none;
+		background: #B9B9B9;
+		color: #000000;
+	}
+
+	/* Menu */
+
+	#menu {
+		float: right;
+		width: 500px;
+		height: 90px;
+		margin: 0 auto;
+		padding: 0;
+	}
+
+	#menu ul {
+		float: right;
+		margin: 0;
+		padding: 85px 0px 0px 0px;
+		list-style: none;
+		line-height: normal;
+	}
+
+	#menu li {
+		float: left;
+	}
+
+	#menu a {
+		display: block;
+		margin-right: 1px;
+		padding: 10px 0px 15px 30px;
+		text-decoration: none;
+		text-transform: lowercase;
+		text-align: center;
+		font-size: 20px;
+		font-weight: 300;
+		color: #CE92A6;
+		border: none;
+	}
+
+	#menu a:hover, #menu .current_page_item a {
+		text-decoration: none;
+		color: #FFFFFF;
+	}
+
+	#menu .current_page_item a {
+	}
+
+	/* Page */
+
+	#page {
+		padding: 30px 0px 0px 0px;
+	}
+
+	/* Content */
+
+	#content {
+		float: left;
+		width: 620px;
+		padding: 0px 40px 0px 0px;
+		background: no-repeat right 40px;
+	}
+
+	.post {
+		overflow: hidden;
+	}
+
+	.post .title {
+		padding: 0px 0px 30px 0px;
+		letter-spacing: -3px;
+	}
+
+	.post .title a {
+		border: none;
+		text-transform: lowercase;
+		color: #7D7764;
+	}
+
+	.post .meta {
+		margin-bottom: 30px;
+		padding: 0px;
+		text-align: left;
+		font-size: 16px;
+	}
+
+	.post .meta .date {
+		float: left;
+	}
+
+	.post .meta .posted {
+		float: right;
+	}
+
+	.post .meta a {
+	}
+
+	.post .entry {
+		padding: 0px 0px 20px 0px;
+		padding-bottom: 20px;
+		text-align: justify;
+		font-size: 20px;
+	}
+
+	.links {
+		padding-top: 20px;
+		margin-bottom: 30px;
+	}
+
+	.more {
+		display: block;
+		float: left;
+		width: 88px;
+		height: 25px;
+		padding: 2px 0px 0px 0px;
+		margin-right: 10px;
+		background: no-repeat left top;
+		text-align: center;
+		color: #FFFFFF;
+	}
+
+	.comments {
+		display: block;
+		float: left;
+		width: 88px;
+		height: 25px;
+		padding: 2px 0px 0px 0px;
+		background: no-repeat left top;
+		text-align: center;
+		color: #FFFFFF;
+	}
+
+	/* Sidebar */
+
+	#sidebar {
+		float: right;
+		width: 320px;
+		margin: 0px;
+		padding: 0px 0px 0px 0px;
+		color: #787878;
+	}
+
+	#sidebar h2 {
+		padding: 0px 0px 30px 0px;
+		letter-spacing: -3px;
+	}
+
+	#sidebar a {
+		border: none;
+	}
+
+	#sidebar a:hover {
+		text-decoration: underline;
+	}
+
+	/* Calendar */
+
+	#calendar {
+	}
+
+	#calendar_wrap {
+		padding: 20px;
+	}
+
+	#calendar table {
+		width: 100%;
+	}
+
+	#calendar tbody td {
+		text-align: center;
+	}
+
+	#calendar #next {
+		text-align: right;
+	}
+
+	/* Three Column Footer Content */
+
+	#footer-content {
+		background: no-repeat center top;
+		color: #E2B8C6;
+	}
+
+	#footer-bg {
+		overflow: hidden;
+		padding: 70px 0px;
+	}
+
+	#footer-content h2 {
+		margin: 0px;
+		padding: 0px 0px 20px 0px;
+		letter-spacing: -2px;
+		text-shadow: 1px 2px 0px #861F40;
+		text-transform: lowercase;
+		font-size: 36px;
+		color: #FFFFFF;
+	}
+
+	#column1 {
+		float: left;
+		width: 320px;
+		margin-right: 20px;
+	}
+
+	#column2 {
+		float: left;
+		width: 320px;
+	}
+
+	#column3 {
+		float: right;
+		width: 320px;
+	}
+
+	/* Footer */
+
+	#footer {
+		height: 100px;
+		margin: 0 auto;
+		padding: 50px 0px 0px 0px;
+		background: no-repeat center top;
+	}
+
+	#footer p {
+		margin: 0;
+		padding-top: 10px;
+		line-height: normal;
+		text-align: center;
+		color: #C76485;
+		font-size: 10px;
+	}
+
+	#footer a {
+		color: #C76485;
+		font-size: 10px;
+	}
+
+	#marketing {
+		overflow: hidden;
+		margin-bottom: 30px;
+		padding: 20px 0px 10px 0px;
+		border-top: 1px solid #E3E3E3;
+		border-bottom: 1px solid #E3E3E3;
+	}
+
+	#marketing .text1 {
+		float: left;
+		margin: 0px;
+		padding: 0px;
+		letter-spacing: -2px;
+		text-transform: lowercase;
+		font-size: 34px;
+		color: #345E9B;
+	}
+
+	#marketing .text2 {
+		float: right;
+	}
+
+	#marketing .text2 a {
+		display: block;
+		width: 252px;
+		height: 38px;
+		padding: 15px 0px 0px 0px;
+		background: no-repeat left top;
+		letter-spacing: -2px;
+		text-align: center;
+		text-transform: lowercase;
+		font-size: 30px;
+		color: #FFFFFF;
+	}
+
+	.box1 {
+		overflow: hidden;
+		height: 300px;
+		background: no-repeat center bottom;
+	}
+
+	.list-style1 {
+		margin: 0px;
+		padding: 0px;
+		list-style: none;
+	}
+
+	.list-style1 li {
+		padding: 7px 0px 7px 0px;
+		border-top: 1px dashed #E7E2DC;
+	}
+
+	.list-style1 .first {
+		padding-top: 0px;
+		border-top: none;
+	}
+
+	.list-style2 {
+		margin: 0px;
+		padding: 0px;
+		list-style: none;
+	}
+
+	.list-style2 li {
+		padding: 7px 0px 7px 0px;
+		background: repeat-x left top;
+	}
+
+	.list-style2 a {
+		color: #E2B8C6;
+	}
+
+	.list-style2 a:hover {
+		color: #C76485;
+	}
+
+	.list-style2 .first {
+		padding-top: 0px;
+		background: none;
+	}
 </style>
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
@@ -504,40 +500,71 @@ http://www.freecsstemplates.org
 Released for free under a Creative Commons Attribution 2.5 License
 
 Name       : Good-Natured
-   
+
 Description: A two-column, fixed-width design with dark color scheme.
 Version    : 1.0
 Released   : 20120817
 
 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta name="keywords" content="" />
-<meta name="description" content="" />
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<title>De Sanctuary Malaysia</title>
-<link href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet" type="text/css" />	
-</head>
-<body>
-<div id="header-wrapper">
-	<div id="header" class="container">
-		<div id="logo">
-			<h1><a href="#">De Sanctuary </a></h1>
+	<head>
+		<meta name="keywords" content="" />
+		<meta name="description" content="" />
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<title>De Sanctuary Malaysia</title>
+		<link href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet" type="text/css" />
+	</head>
+	<body>
+		<div id="header-wrapper">
+			<div id="header" class="container">
+				<div id="logo">
+					<h1><a href="#">De Sanctuary </a></h1>
+				</div>
+				<div id="menu">
+					<ul>
+						<li>
+							<a href="/">Homepage</a>
+						</li>
+						<li>
+							<a href="/find_us">Find us</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div id="banner" class="container">
+				<div class="image-style">
+					<%= image_tag("banner.png", :alt => "rss feed", :width => 970, :height => 320) %>
+				</div>
+			</div>
 		</div>
-		<div id="menu">
-			<ul>
-				<li class="current_page_item"><a href="#">Homepage</a></li>
-				<li><a href="/find_us">Find us</a></li>
-			</ul>
+		<div id ="wrapper">
+			<%= yield %>
 		</div>
-	</div>
-	<div id="banner" class="container">
-		<div class="image-style"><img src="/images/banner.png" height="300" width="900"></div>
-	</div>
-</div>
-<div id="footer">
-	<p>© 2012 Untitled Inc. All rights reserved. Lorem ipsum dolor sit amet nullam blandit consequat phasellus etiam lorem. Design by <a href="http://www.freecsstemplates.org/" rel="nofollow">FreeCSSTemplates.org</a>.  Photos by <a href="http://fotogrph.com/">Fotogrph</a>.</p>
-</div>
-<!-- end #footer -->
-</body>
+		<div id="sidebar">
+			<div>
+				<h2>We offer:</h2>
+				<ul class="list-style1">
+					<li class="first">
+						<a href="/massage_treatment">Massage treatment</a>
+					</li>
+					<li>
+						<a href="/facial">Facial treatment</a>
+					</li>
+					<li>
+						<a href="/body">Body treatment</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div style="clear: both;">
+			&nbsp;
+		</div>
+
+		<div id="footer">
+			<p>
+				© 2012 Untitled Inc. All rights reserved. Lorem ipsum dolor sit amet nullam blandit consequat phasellus etiam lorem. Design by <a href="http://www.freecsstemplates.org/" rel="nofollow">FreeCSSTemplates.org</a>.  Photos by <a href="http://fotogrph.com/">Fotogrph</a>.
+			</p>
+		</div>
+		<!-- end #footer -->
+	</body>
 </html>
